# trainer

./: .env.example  .gitignore  .justfile  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  validate-codecov-config.yml
shared/utils/: pyproject.toml
src/core/: pyproject.toml
src/dashboard/: pyproject.toml
src/dashboard/src/: cli.py
src/dashboard/src/dashboard/: api.py  cli.py  training.py
src/dashboard/src/dashboard/templates/: dashboard.html
src/trainer/: pyproject.toml
src/trainer/src/trainer/: cli.py  mnist_training.py  training.py
tests/scripts/: test_this.py
tests/shared/utils/: test_get_token.py  test_return_one.py
tests/src/core/: test_return_two.py
