[project]
name = "dashboard"
version = "0.0.0"
description = "Dashboard"
authors = [
  {name="Miguel Villa Floran", email="miguel.villafloran@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "utils",
    "typer>=0.12.5"
]

[project.scripts]
dashboard = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
utils = { workspace = true }
