[project]
name = "dashboard"
version = "0.0.0"
description = "Dashboard functionality"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "utils",
  "typer>=0.12.5",
  "uvicorn>=0.34.0",
  "fastapi>=0.115.8",
  "jinja2>=3.1.5",
  "pynvml>=11.5.0",
  "torch>=2.6.0",
]

[project.scripts]
dashboard = "dashboard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
